Archive2/e2/d871e09339db4d/output
main.cpp: In function 'int main()':
main.cpp:10:32:   in constexpr expansion of 'f()'
main.cpp:5:41: error: 'printf(((const char*)"a side effect!\012"))' is not a constant expression
         return printf("a side effect!\n");
                                         ^
main.cpp:11:20: error: size of array 'a' is not an integral constant-expression
         char a[size];
                    ^
